--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/KhrystynaTrl/Progetto_S2I_JS_advanced#readme",
   "devDependencies": {
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.3"
   },
   "dependencies": {
