--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^5.6.3"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "css-loader": "^7.1.2",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
